Whitespace fixes

--- a/src/less/log.io.less
+++ b/src/less/log.io.less
@@ -1,6 +1,6 @@
 /*
- * Log.io Web Client styles
- */
+	Log.io Web Client styles
+*/
 
 @font-face {
 	font-family: 'Source Sans Pro';
@@ -17,10 +17,10 @@
 }
 
 @font-face {
-  font-family: 'Inconsolata';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Inconsolata'), url('../Inconsolata.ttf') format('truetype');
+	font-family: 'Inconsolata';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Inconsolata'), url('../Inconsolata.ttf') format('truetype');
 }
 
 // Defaults
@@ -63,15 +63,15 @@
 		width: 10px;
 		background-color: #333;
 	}
-	 
+	
 	&::-webkit-scrollbar-track {
-		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 		border-radius: 8px;
 	}
-	 
+	
 	&::-webkit-scrollbar-thumb {
 		border-radius: 8px;
-		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 	}
 }
 
@@ -118,7 +118,7 @@ body {
 			color: #eee;
 			background-color: #333;
 			background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#333));
-			background-image: -webkit-linear-gradient(top, #222, #333); 
+			background-image: -webkit-linear-gradient(top, #222, #333);
 			background-image: -moz-linear-gradient(top, #222, #333);
 			background-image: -ms-linear-gradient(top, #222, #333);
 			background-image: -o-linear-gradient(top, #222, #333);
@@ -145,7 +145,7 @@ body {
 				color: #eee;
 
 				background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#111), to(#000));
-				background-image: -webkit-linear-gradient(top, #111, #000); 
+				background-image: -webkit-linear-gradient(top, #111, #000);
 				background-image: -moz-linear-gradient(top, #111, #000);
 				background-image: -ms-linear-gradient(top, #111, #000);
 				background-image: -o-linear-gradient(top, #111, #000);
